[Misc] Align Clover versions used

--- a/xwiki-platform-tools/xwiki-platform-tool-packager-plugin/src/it/basic-import-export/pom.xml
+++ b/xwiki-platform-tools/xwiki-platform-tool-packager-plugin/src/it/basic-import-export/pom.xml
@@ -98,7 +98,7 @@
             <artifactId>xwiki-platform-tool-packager-plugin</artifactId>
             <dependencies>
               <dependency>
-                <groupId>com.cenqua.clover</groupId>
+                <groupId>com.atlassian.clover</groupId>
                 <artifactId>clover</artifactId>
                 <version>${clover.version}</version>
               </dependency>
