--- a/xwiki-platform-core/xwiki-platform-user/xwiki-platform-user-directory/xwiki-platform-user-directory-test/xwiki-platform-user-directory-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-user/xwiki-platform-user-directory/xwiki-platform-user-directory-test/xwiki-platform-user-directory-test-tests/pom.xml
@@ -84,7 +84,7 @@
            It's needed because instrumented jars in the WAR will call Clover APIs at runtime when they execute. -->
       <dependencies>
         <dependency>
-          <groupId>com.cenqua.clover</groupId>
+          <groupId>com.atlassian.clover</groupId>
           <artifactId>clover</artifactId>
         </dependency>
       </dependencies>
@@ -98,7 +98,7 @@
             <version>${project.version}</version>
             <dependencies>
               <dependency>
-                <groupId>com.cenqua.clover</groupId>
+                <groupId>com.atlassian.clover</groupId>
                 <artifactId>clover</artifactId>
                 <version>${clover.version}</version>
               </dependency>
