--- a/xwiki-platform-tools/xwiki-platform-tool-xmldoc-update-plugin/pom.xml
+++ b/xwiki-platform-tools/xwiki-platform-tool-xmldoc-update-plugin/pom.xml
@@ -142,7 +142,7 @@
            thus when unit tests are executed we need the Clover JAR in the classpath -->
       <dependencies>
         <dependency>
-          <groupId>com.cenqua.clover</groupId>
+          <groupId>com.atlassian.clover</groupId>
           <artifactId>clover</artifactId>
           <scope>test</scope>
         </dependency>
