--- a/xwiki-platform-core/xwiki-platform-vfs/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-vfs/pom.xml
@@ -28,43 +28,10 @@
     <version>7.4-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-vfs</artifactId>
-  <name>XWiki Platform - VFS API</name>
-  <description>VFS API</description>
-  <properties>
-    <xwiki.jacoco.instructionRatio>0.65</xwiki.jacoco.instructionRatio>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-resource-api</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-url-api</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-script</artifactId>
-      <version>${commons.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.java.truevfs</groupId>
-      <artifactId>truevfs-profile-default</artifactId>
-      <version>0.11.0</version>
-      <type>pom</type>
-    </dependency>
-    <!-- Test Dependencies -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <packaging>pom</packaging>
+  <name>XWiki Platform - VFS - Parent POM</name>
+  <description>XWiki Platform - VFS - Parent POM</description>
+  <modules>
+    <module>xwiki-platform-vfs-api</module>
+  </modules>
 </project>
