XWIKI-12807: Split the name in Create Page when the name is too long * Display the location picker even when the current page doesn't exist.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -711,7 +711,6 @@ core.shortcuts.edit.saveandview=Alt+S
 
 ### Create
 core.create.pageTitle=Create Page
-core.create.newPageTitle=Create Page: {0}
 
 core.create.title=Title
 core.create.title.hint=Title of the new page
@@ -5084,6 +5083,13 @@ platform.appwithinminutes.appNameInvalidClassNameError=We can't extract a valid 
 ## The "type" property has been removed and data migrated to the new "terminal" property.
 xe.templateprovider.templatetype=Template type
 xe.templateprovider.templatetype.info=Whether this template should be used for creating generic pages or is specific to space homepages
+
+#######################################
+## until 7.4M1
+#######################################
+
+## We don't need this key any more because the page that is going to be created is specified by the location picker.
+core.create.newPageTitle=Create Page: {0}
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
