--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2615,6 +2615,175 @@ xe.invitation.messageStatus.investigated=Spam report investigated
 xe.invitation.messageStatus.unknown=Unknown status ({0})
 xe.invitation.messageStatus.sendingFailed=Failed to send message
 
+####################
+# BEGIN: Translations for App Within Minutes
+####################
+
+### Home page
+platform.appwithinminutes.homePageTitle=App Within Minutes
+platform.appwithinminutes.description=Create collaborative web applications within minutes, based on XWiki's powerful structured data management system.
+platform.appwithinminutes.createAppButtonLabel=Create Application
+platform.appwithinminutes.appsLiveTableHeading=Applications
+platform.appwithinminutes.appsLiveTable.doc.space=Application name
+platform.appwithinminutes.appsLiveTable.doc.author=Last author
+platform.appwithinminutes.appsLiveTable.doc.date=Update date
+platform.appwithinminutes.appsLiveTable._actions=Actions
+platform.appwithinminutes.grantSpaceAdminRightsSaveComment=Grant space administration rights.
+
+### AWM Applications panel entry
+platform.appwithinminutes.appPanelCreateEntry=Create your own!
+
+### Wizard step
+platform.appwithinminutes.wizardStepHeading=Step {0} \u2014 {1}
+platform.appwithinminutes.wizardStep1Name=Name
+platform.appwithinminutes.wizardStep1Title=Name your application
+platform.appwithinminutes.wizardStep1Description=Provide the application name.
+platform.appwithinminutes.wizardStep2Name=Structure
+platform.appwithinminutes.wizardStep2Title=Define the structure of your application
+platform.appwithinminutes.wizardStep2Description=Generate the structure of your application by specifying what types of fields it will contain.
+platform.appwithinminutes.wizardStep3Name=Presentation
+platform.appwithinminutes.wizardStep3Title=Customize the home page of your application
+platform.appwithinminutes.wizardStep3Description=Personalize the home page of your application.
+platform.appwithinminutes.wizardStepNextButtonLabel=Next Step
+platform.appwithinminutes.wizardStepNextButtonTip=Go to next step
+platform.appwithinminutes.wizardStepFinishButtonLabel=Finish
+platform.appwithinminutes.wizardStepFinishButtonTip=Go to the application home page
+platform.appwithinminutes.wizardStepPreviousButtonLabel=Previous Step
+platform.appwithinminutes.wizardStepPreviousButtonTip=Go to previous step
+platform.appwithinminutes.wizardStepHelpTitle=Steps
+platform.appwithinminutes.wizardStepHelpDescription=This wizard will guide you towards building your application. These steps will configure the way your application will be displayed and what kind of information will contain:
+
+### Wizard Step 1: Application Name
+platform.appwithinminutes.appNamePageTitle=Create Application
+platform.appwithinminutes.appNameLabel=Application Name
+platform.appwithinminutes.appNameHint=The name of the application determines the URL of the application home page, the location where the application code and data will be stored as well as the name of the class that will describe the application structure.
+platform.appwithinminutes.appNamePreviewHomePageUrlLabel=Application home page URL
+platform.appwithinminutes.appNamePreviewDataSpaceLabel=Application data location
+platform.appwithinminutes.appNamePreviewCodeSpaceLabel=Application code location
+platform.appwithinminutes.appNamePreviewClassReferenceLabel=Application class
+platform.appwithinminutes.appNameIsUsedWarning=This application already exists. If you go to the next step you will be editing the existing application.
+platform.appwithinminutes.appNameEmptyError=Please enter the application name.
+
+### Wizard Step 1: Application Structure
+platform.appwithinminutes.classEditorPaletteTitle=Field Palette
+platform.appwithinminutes.classEditorPaletteHint=Drag&Drop fields from the palette to create your form.
+platform.appwithinminutes.classEditorCanvasHint=Drag fields from the palette and drop them in this area.
+
+platform.appwithinminutes.classEditorUpdateTemplateLabel=Update class template
+platform.appwithinminutes.classEditorUpdateTemplateHint=Save the default field values in the class template ({0}).
+platform.appwithinminutes.classEditorUpdateSheetLabel=Update class sheet
+platform.appwithinminutes.classEditorUpdateSheetHint=Recreate the sheet used to display and edit objects of this class ({0}).
+platform.appwithinminutes.classEditorUpdateTranslationsLabel=Update class translation bundle
+platform.appwithinminutes.classEditorUpdateTranslationsHint=Update the translation of field pretty names and list values ({0}).
+
+platform.appwithinminutes.classEditorMultipleSheetsWarning=This class has multiple sheets.
+platform.appwithinminutes.classEditorDuplicateFieldNameError=The class has two fields with the same name: {0}
+platform.appwithinminutes.classEditorTemplateSaveComment=Update default values
+platform.appwithinminutes.classEditorBindSheetSaveComment=Bind class sheet
+platform.appwithinminutes.classEditorSheetSaveComment=Update class sheet
+platform.appwithinminutes.classEditorTranslationsSaveComment=Update translations
+
+platform.appwithinminutes.classEditorStandardCategoryName=Standard
+platform.appwithinminutes.classEditorPickersCategoryName=Pickers
+platform.appwithinminutes.classEditorDocumentCategoryName=Page
+platform.appwithinminutes.classEditorAdvancedCategoryName=Advanced
+
+platform.appwithinminutes.classEditorDBListFieldName=Database List
+platform.appwithinminutes.classEditorGroupsFieldName=Group
+platform.appwithinminutes.classEditorUsersFieldName=User
+platform.appwithinminutes.classEditorDateFieldName=Date
+platform.appwithinminutes.classEditorStaticListFieldName=Static List
+platform.appwithinminutes.classEditorBooleanFieldName=Boolean
+platform.appwithinminutes.classEditorNumberFieldName=Number
+platform.appwithinminutes.classEditorTextAreaFieldName=Long Text
+platform.appwithinminutes.classEditorStringFieldName=Short Text
+platform.appwithinminutes.classEditorContentFieldName=Content
+platform.appwithinminutes.classEditorTitleFieldName=Title
+
+platform.appwithinminutes.classEditorDeleteFieldLabel=Delete
+platform.appwithinminutes.classEditorConfigureFieldLabel=Configure
+platform.appwithinminutes.classEditorPreviewFieldLabel=Preview
+platform.appwithinminutes.classEditorPreviewFieldHint=Hide configuration panel and apply changes
+platform.appwithinminutes.classEditorMoveFieldLabel=Move
+platform.appwithinminutes.classEditorMoveFieldHint=Drag and drop to change the order
+
+platform.appwithinminutes.classEditorFieldDefaultValueToolTip=Default value
+
+### Date Picker
+platform.appwithinminutes.classEditorDatePickerAcceptSelectedDate=OK
+platform.appwithinminutes.classEditorDatePickerClearSelectedDate=Clear
+platform.appwithinminutes.classEditorDatePickerSelectCurrentTime=Now
+platform.appwithinminutes.classEditorDatePickerSelectCurrentDate=Today
+
+### Static List Editor
+platform.appwithinminutes.classEditorStaticListEditorItemValueLabel=Value
+platform.appwithinminutes.classEditorStaticListEditorItemIDLabel=ID
+platform.appwithinminutes.classEditorStaticListEditorAddItemLabel=Add
+platform.appwithinminutes.classEditorStaticListEditorDeleteItemLabel=Delete
+
+### Wizard Step 3: Application Presentation
+platform.appwithinminutes.liveTableEditorClassFieldColumnGroupLabel=Class fields
+platform.appwithinminutes.liveTableEditorGenericColumnGroupLabel=Generic columns
+platform.appwithinminutes.liveTableEditorHelpTitle=Tip
+platform.appwithinminutes.liveTableEditorHelpDescription=Generic live table columns are independent of your application structure. They provide information about the pages that hold your application entries.
+platform.appwithinminutes.liveTableEditorDocTitleColumnName=Page title
+platform.appwithinminutes.liveTableEditorDocTitleColumnDescription=The title of the page that contains the application entry
+platform.appwithinminutes.liveTableEditorDocNameColumnName=Page name
+platform.appwithinminutes.liveTableEditorDocNameColumnDescription=The name of the page that contains the application entry
+platform.appwithinminutes.liveTableEditorDocSpaceColumnName=Space
+platform.appwithinminutes.liveTableEditorDocSpaceColumnDescription=The name of the space containing the application entry
+platform.appwithinminutes.liveTableEditorDocFullNameColumnName=Page full name
+platform.appwithinminutes.liveTableEditorDocFullNameColumnDescription=The name of the page that contains the application entry, prefixed with the space name
+platform.appwithinminutes.liveTableEditorDocAuthorColumnName=Last Author
+platform.appwithinminutes.liveTableEditorDocAuthorColumnDescription=The user who last edited the application entry
+platform.appwithinminutes.liveTableEditorDocCreatorColumnName=Creator
+platform.appwithinminutes.liveTableEditorDocCreatorColumnDescription=The user who created the application entry
+platform.appwithinminutes.liveTableEditorDocDateColumnName=Update date
+platform.appwithinminutes.liveTableEditorDocDateColumnDescription=The date when the application entry was last edited
+platform.appwithinminutes.liveTableEditorDocCreationDateColumnName=Creation date
+platform.appwithinminutes.liveTableEditorDocCreationDateColumnDescription=The date when the application entry was created
+platform.appwithinminutes.liveTableEditorActionsColumnName=Actions
+platform.appwithinminutes.liveTableEditorActionsColumnDescription=A list of actions that can be performed on the application entry, such as edit and delete
+platform.appwithinminutes.liveTableEditorAttachmentsColumnName=Attachments
+platform.appwithinminutes.liveTableEditorAttachmentsColumnDescription=A special column to display links to the attachments of the entry page
+platform.appwithinminutes.liveTableEditorImagesColumnName=Images
+platform.appwithinminutes.liveTableEditorImagesColumnDescription=A special column to display the images attached to the entry page
+platform.appwithinminutes.liveTableEditorAvatarColumnName=Avatar
+platform.appwithinminutes.liveTableEditorAvatarColumnDescription=A special column to display the user avatar. Works only for a table bound to the XWiki.XWikiUsers class
+platform.appwithinminutes.liveTableEditorDescriptionHint=The description contains a short resume of what the application does and what kind of data it will handle.
+platform.appwithinminutes.liveTableEditorColumnsHint=Select the columns you would like to include in the live table displayed on the application home page.
+platform.appwithinminutes.liveTableEditorSaveComment=Update LiveTable
+platform.appwithinminutes.liveTableEditorMoveColumnHint=Drag and drop to change the order
+platform.appwithinminutes.liveTableEditorDeleteColumnHint=Delete
+platform.appwithinminutes.liveTableEditorAddColumnHint=Add
+platform.appwithinminutes.liveTableEditorDeprecatedColumnsWarning=Some columns are deprecated, probably because the corresponding class fields have been deleted. Do you wish to remove them? <a href="">Yes</a> / <a href="">No</a>
+platform.appwithinminutes.liveTableEditorIcon=Icon
+platform.appwithinminutes.liveTableEditorIconHintWithPicker=A reference to an icon. It could be any image stored in the wiki but you can also pick an icon from the picker displayed when the field have focus.
+
+### Application home page
+platform.appwithinminutes.appLiveTableHeading=Entries
+platform.appwithinminutes.appLiveTableEditEntryActionName=Edit
+platform.appwithinminutes.appLiveTableDeleteEntryActionName=Delete
+platform.appwithinminutes.appHomePageActionsHeading=Actions
+platform.appwithinminutes.appHomePageAddEntryLabel=Add
+platform.appwithinminutes.appHomePageAddEntryHint=Add new entry
+platform.appwithinminutes.appHomePageEntryNameLabel=Entry name:
+platform.appwithinminutes.appHomePageDeleteEntriesLabel=Delete all entries
+platform.appwithinminutes.appHomePageEditAppLabel=Edit application
+platform.appwithinminutes.appHomePageTranslateAppLabel=Translate application
+platform.appwithinminutes.appHomePageDeleteAppLabel=Delete application
+
+### Delete application dialog
+platform.appwithinminutes.deleteAppConfirmation=The application {0} and ALL its entries will be deleted. Are you sure you wish to continue?
+platform.appwithinminutes.deleteAppEntriesConfirmation=ALL the entries of the application {0} will be deleted. Are you sure you wish to continue?
+platform.appwithinminutes.deleteAppDoesNotExistError=The specified application does not exist.
+platform.appwithinminutes.deleteAppInvalidAppError=The specified name is not a valid App Within Minutes application.
+platform.appwithinminutes.deleteAppNotSpecifiedError=No application name was specified.
+
+####################
+# END: Translations for App Within Minutes
+####################
+
 ## LDAP application
 platform.ldap.missingLdapService=LDAP service is not available. Please verify your installation.
 platform.ldap.ldapAuthenticationIsNotEnabledWarning=LDAP authentication is not enabled. Please set LDAP as authentication service in ##xwiki.cfg##
