--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1204,6 +1204,7 @@ core.editors.saveandcontinue.theDocumentWasNotSaved=The page was not saved!
 core.editors.saveandcontinue.notification.inprogress=Saving...
 core.editors.saveandcontinue.notification.done=Saved
 core.editors.saveandcontinue.notification.error=Failed to save the page. Reason: {0}
+core.editors.savewithprogress.notification=Saving... __PROGRESS__%
 
 core.space.recyclebin.confirm=This action will move ALL pages in space {0} to the Recycle Bin. Are you sure you wish to continue?
 core.space.delete.confirm=This action will remove ALL pages in space {0} from your wiki. Are you sure you wish to continue?
