XWIKI-12494: Search Application is using getSpaces() for Database Search * Replace the space drop down (HTML select) with a text input that provides space suggestions as you type * Refactor the REST space search to use the XWikiSpace table * Remove unused Velocity and CSS code from the Database Search UI * Refactor a bit the code of the Database Search UI

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3637,8 +3637,7 @@ search.extension.title.solr=Solr
 XWiki.SearchConfigClass_engine=Default search engine
 search.page.title.query=Search: {0}
 search.page.title.noquery=Search
-search.page.bar.spaces.title=Select spaces
-search.page.bar.spaces.all=All spaces
+search.page.bar.spaces.title=Location
 search.page.bar.wikis.all=All wikis
 search.page.bar.query.tip=search...
 search.page.bar.query.title=Enter your search query
@@ -3659,14 +3658,9 @@ search.page.results.author=Last Author
 search.page.results.score=Score
 search.page.results.actions=Actions
 search.page.results.newcomment=- 1 new comment
-search.page.results.guest=Guest
-search.page.results.copy=Copy
-search.page.results.delete=Delete
-search.page.results.rename=Rename
-search.page.results.rights=Rights
 search.page.results.noResults=Your search did not match any pages.
 search.page.noimplementation=There's no Search UI Extension available in your wiki. Please contact your Administrator.
-search.item.location=Located in <a href="{1}">{0}</a> &#187; <a href="{3}">{2}</a> &#187; <a href="{5}">{4}</a>
+search.item.locatedIn=Located in
 search.item.modified=Modified by <span class="itemAuthor">{0}</span> on <span class="itemDate">{1}</span>
 search.item.posted=Posted by <span class="itemAuthor">{0}</span> on <span class="itemDate">{1}</span>
 search.item.rating.title=Rating
@@ -5090,6 +5084,15 @@ xe.templateprovider.templatetype.info=Whether this template should be used for c
 
 ## We don't need this key any more because the page that is going to be created is specified by the location picker.
 core.create.newPageTitle=Create Page: {0}
+
+## The database search UI doesn't use these keys any more.
+search.item.location=Located in <a href="{1}">{0}</a> &#187; <a href="{3}">{2}</a> &#187; <a href="{5}">{4}</a>
+search.page.bar.spaces.all=All spaces
+search.page.results.copy=Copy
+search.page.results.delete=Delete
+search.page.results.rename=Rename
+search.page.results.rights=Rights
+search.page.results.guest=Guest
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
