XWIKI-12901: Add ability to specify custom extension repositories in functional tests XWIKI-12884: No way to specify a webjars URL for a resource located in another wiki XWIKI-12878: Webjar installed by EM on a subwiki could not be loaded through the webjar action
Conflicts:
	xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/pom.xml

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
@@ -46,7 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-webjars</artifactId>
+      <artifactId>xwiki-platform-webjars-api</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
