--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
@@ -62,7 +62,7 @@
     <dependency>
       <!-- Used in the Require.js configuration. -->
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-webjars</artifactId>
+      <artifactId>xwiki-platform-webjars-api</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
