--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/pom.xml
@@ -54,7 +54,7 @@
     <!-- WebJars -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-webjars</artifactId>
+      <artifactId>xwiki-platform-webjars-api</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
