--- a/xwiki-platform-core/xwiki-platform-vfs/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-vfs/pom.xml
@@ -36,4 +36,12 @@
     <module>xwiki-platform-vfs-api</module>
     <module>xwiki-platform-vfs-ui</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>integration-tests</id>
+      <modules>
+        <module>xwiki-platform-vfs-test</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
