--- a/xwiki-platform-core/xwiki-platform-vfs/xwiki-platform-vfs-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-vfs/xwiki-platform-vfs-api/pom.xml
@@ -32,7 +32,8 @@
   <packaging>jar</packaging>
   <description>VFS API</description>
   <properties>
-    <vfs.version>0.11.0</vfs.version>
+    <truevfs.version>0.11.0</truevfs.version>
+    <truecommons.version>2.5.0</truecommons.version>
     <xwiki.jacoco.instructionRatio>0.64</xwiki.jacoco.instructionRatio>
   </properties>
   <dependencies>
@@ -59,67 +60,79 @@
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-access</artifactId>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-jar</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-zip</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-kernel-impl</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.java.truecommons</groupId>
+      <artifactId>truecommons-key-default</artifactId>
+      <scope>runtime</scope>
+      <version>${truecommons.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-http</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-odf</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-tar</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-tar-bzip2</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-tar-gzip</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-tar-xz</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
     </dependency>
     <dependency>
       <groupId>net.java.truevfs</groupId>
       <artifactId>truevfs-driver-zip-raes</artifactId>
       <scope>runtime</scope>
-      <version>${vfs.version}</version>
+      <version>${truevfs.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.java.truecommons</groupId>
+      <artifactId>truecommons-key-macosx</artifactId>
+      <scope>runtime</scope>
+      <version>${truecommons.version}</version>
     </dependency>
     <!-- Test Dependencies -->
     <dependency>
