XWIKI-3622: Add an automatic redirect when renaming a document * Add an option to the Rename Page UI to create an automatic redirect * Introduce XWiki.RedirectClass to store the redirect on the page that has been renamed or moved. * Refactor the refactoring module to be able to write unit tests more easily. * Add more unit tests.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -753,7 +753,9 @@ core.rename.source.hint=The page that is going to be renamed
 core.rename.children.label=Affect {0}{1} {1,choice,0#children|1#child|1<children}{2}
 core.rename.children.hint=Preserve the child pages by updating their path and moving them to the new location
 core.rename.links.label=Update {0}{1} {1,choice,0#links|1#link|1<links} to this page{2}
-core.rename.links.hint=Modify the links to the source page to target the new page
+core.rename.links.hint=Modify the wiki links to the source page to target the new page
+core.rename.autoRedirect.label=Redirect to the new page
+core.rename.autoRedirect.hint=Redirect the user to the new page when accessing the old page. Select this option if you don't want to break external links to the old page.
 core.rename.target.title.label=New Title
 core.rename.target.title.hint=The new page title
 core.rename.target.location.label=New Location
