--- a/xwiki-platform-core/xwiki-platform-refactoring/xwiki-platform-refactoring-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-refactoring/xwiki-platform-refactoring-ui/pom.xml
@@ -27,42 +27,35 @@
     <artifactId>xwiki-platform-refactoring</artifactId>
     <version>7.4-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-refactoring-default</artifactId>
-  <name>XWiki Platform - Refactoring - Default Implementation</name>
-  <description>XWiki Platform - Refactoring - Default Implementation</description>
+  <artifactId>xwiki-platform-refactoring-ui</artifactId>
+  <name>XWiki Platform - Refactoring - UI</name>
+  <packaging>xar</packaging>
   <properties>
-    <xwiki.jacoco.instructionRatio>0.65</xwiki.jacoco.instructionRatio>
+    <!-- Don't run CLIRR here since there's no Java code. -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Refactoring UI</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-refactoring-api</artifactId>
+      <artifactId>xwiki-platform-xclass-ui</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-job</artifactId>
-      <version>${commons.version}</version>
+      <type>xar</type>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
+      <artifactId>xwiki-platform-sheet-ui</artifactId>
       <version>${project.version}</version>
+      <type>xar</type>
+      <scope>runtime</scope>
     </dependency>
-    <!-- Test dependencies -->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <scope>test</scope>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-rendering-macro-velocity</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
