--- a/xwiki-platform-core/xwiki-platform-vfs/xwiki-platform-vfs-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-vfs/xwiki-platform-vfs-ui/pom.xml
@@ -35,7 +35,7 @@
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
     <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>VFS Application</xwiki.extension.name>
+    <xwiki.extension.name>VFS Tree Macro</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
