XWIKI-12573: Adapt Children section from Information viewer for nested spaces.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1083,7 +1083,9 @@ core.viewers.information.creationData=by {0} on {1}
 core.viewers.information.translationCreation=Translated into {0}
 core.viewers.information.translationCreationData=by {0} on {1}
 core.viewers.information.includedPages=Included pages
+core.viewers.information.noIncludedPages=No included pages
 core.viewers.information.backlinks=Backlinks
+core.viewers.information.noBacklinks=No backlinks
 
 core.viewers.code.title=Wiki source code of <a href="{1}">{0}</a>
 core.viewers.code.hideLineNumbers=Hide line numbers
