--- a/xwiki-platform-core/xwiki-platform-extension/xwiki-platform-extension-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-extension/xwiki-platform-extension-ui/pom.xml
@@ -32,10 +32,14 @@
   <artifactId>xwiki-platform-extension-ui</artifactId>
   <name>XWiki Platform - Extension - UI</name>
   <packaging>xar</packaging>
-  <description>XWiki Extension Manager, an application for managing extensions in a wiki.</description>
+  <description>Install/update/remove Extensions in/from the wiki</description>
   <properties>
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Extension Manager Application</xwiki.extension.name>
+    <!-- Category for the Extension Manager -->
+    <xwiki.extension.category>application</xwiki.extension.category>
   </properties>
   <dependencies>
     <dependency>
