[misc] Use ${project.version} instead of hardcoded version

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-test/xwiki-platform-flamingo-skin-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-test/xwiki-platform-flamingo-skin-test-tests/pom.xml
@@ -45,7 +45,7 @@
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-flamingo-skin-resources</artifactId>
       <type>pom</type>
-      <version>7.4-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <!-- Test dependencies -->
     <dependency>
