--- a/xwiki-platform-core/xwiki-platform-svg/xwiki-platform-svg-rasterizer/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-svg/xwiki-platform-svg-rasterizer/pom.xml
@@ -37,6 +37,25 @@
       <artifactId>batik-transcoder</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-codec</artifactId>
+      <!-- Missing batik-transcoder dependency -->
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>xmlgraphics-commons</artifactId>
+      <version>2.0.1</version>
+      <!-- Missing batik-transcoder dependency -->
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
