--- a/xwiki-platform-core/xwiki-platform-extension/xwiki-platform-extension-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-extension/xwiki-platform-extension-test/pom.xml
@@ -27,24 +27,19 @@
     <artifactId>xwiki-platform-extension</artifactId>
     <version>8.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-extension-test-pageobjects</artifactId>
-  <name>XWiki Platform - Extension - Tests - Page Objects</name>
-  <packaging>jar</packaging>
-  <description>The page objects used in the functional tests of the Extension Manager UI.</description>
+  <artifactId>xwiki-platform-extension-test</artifactId>
+  <name>XWiki Platform - Extension - Tests - Parent POM</name>
+  <packaging>pom</packaging>
+  <description>Tests for the Extension Manager Application</description>
   <properties>
-    <!-- Don't run CLIRR in test modules because we don't care about backward compatibility for tests. -->
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-extension-api</artifactId>
-      <version>${commons.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-test-ui</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>xwiki-platform-extension-test-tests</module>
+    <module>xwiki-platform-extension-test-pageobjects</module>
+    <module>xwiki-platform-extension-test-utils</module>
+  </modules>
 </project>
